--- a/manifest.json
+++ b/manifest.json
@@ -9,24 +9,32 @@
   "splash_pages": null,
   "icons": [
     {
-      "src": "mipmap.png",
+      "src": "./assets/icons/mipmap.png",
       "sizes": "512x512"
     },
     {
-      "src": "mipmap.png",
+      "src": "./assets/icons/mipmap.png",
       "sizes": "256x256"
     },
     {
-      "src": "mipmap.png",
+      "src": "./assets/icons/mipmap.png",
       "sizes": "128x128"
     },
     {
-      "src": "mipmap.png",
+      "src": "./assets/icons/mipmap.png",
       "sizes": "64x64"
     },
     {
-      "src": "mipmap.png",
+      "src": "./assets/icons/mipmap.png",
       "sizes": "32x32"
+    },
+    {
+      "src": "./assets/icons/mipmap.png",
+      "sizes": "24x24"
+    },
+    {
+      "src": "./assets/icons/mipmap.png",
+      "sizes": "16x16"
     }
   ]
 }
